unpackaged/main/default/objects/Students_New__c/Students_New__c.object-meta.xml
<CustomObject>
    <label>Student New</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Student  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students New</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>