unpackaged/main/default/objects/Students_New__c/fields/Buses_available_on_Routes__c.field-meta.xml
<CustomField>
    <fullName>Buses_available_on_Routes__c</fullName>
    <label>Buses available on Routes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Routes</fullName>
            </value>
            <value>
                <fullName>Expired Routes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>