unpackaged/main/default/objects/Students_New__c/fields/Daily_trips__c.field-meta.xml
<CustomField>
    <fullName>Daily_trips__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily trips</label>
    <type>Checkbox</type>
</CustomField>