unpackaged/main/default/objects/Students_New__c/fields/Delayed_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Delayed_to_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delayed to Complete</label>
    <type>Checkbox</type>
</CustomField>