unpackaged/main/default/objects/Students_New__c/fields/Delayed_to_reach__c.field-meta.xml
<CustomField>
    <fullName>Delayed_to_reach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delayed to reach</label>
    <type>Checkbox</type>
</CustomField>