unpackaged/main/default/objects/Students_New__c/fields/Delayed_Trips__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Trips__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delayed Trips</label>
    <type>Checkbox</type>
</CustomField>