unpackaged/main/default/objects/Students_New__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <label>Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXPIRED REGISTRATION</fullName>
            </value>
            <value>
                <fullName>MISSING DOCUMENTS</fullName>
            </value>
            <value>
                <fullName>MISSING MANDATORY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>