unpackaged/main/default/objects/Students_New__c/fields/Double_trips_buses__c.field-meta.xml
<CustomField>
    <fullName>Double_trips_buses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double trips buses</label>
    <type>Checkbox</type>
</CustomField>