unpackaged/main/default/objects/Students_New__c/fields/KG_trips__c.field-meta.xml
<CustomField>
    <fullName>KG_trips__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KG trips</label>
    <type>Checkbox</type>
</CustomField>