unpackaged/main/default/objects/Students_New__c/fields/KG_trips_on_big_buses__c.field-meta.xml
<CustomField>
    <fullName>KG_trips_on_big_buses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KG trips on big buses</label>
    <type>Checkbox</type>
</CustomField>