unpackaged/main/default/objects/Students_New__c/fields/Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pickup Time</label>
    <type>DateTime</type>
</CustomField>