unpackaged/main/default/objects/Students_New__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>ETST_School__c</referenceTo>
    <relationshipName>Students1</relationshipName>
    <type>Lookup</type>
</CustomField>