unpackaged/main/default/objects/Students_New__c/fields/Student_Drop_off__c.field-meta.xml
<CustomField>
    <fullName>Student_Drop_off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afternoon Trips</label>
    <type>Checkbox</type>
</CustomField>