unpackaged/main/default/objects/Students_New__c/fields/Student_Pick_up__c.field-meta.xml
<CustomField>
    <fullName>Student_Pick_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Morning Trip</label>
    <type>Checkbox</type>
</CustomField>