unpackaged/main/default/objects/Students_New__c/fields/Trip_Status__c.field-meta.xml
<CustomField>
    <fullName>Trip_Status__c</fullName>
    <label>Trip Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trip - Completed</fullName>
            </value>
            <value>
                <fullName>Trip - Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>